--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name - Portfolio</title>
+  <title>Lance Andrei Centeno - Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -68,13 +68,13 @@
 
   <section>
     <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
+    <p>Email: centenolanceandre@gmail.com</p>
     <p>LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></p>
-    <p>GitHub: <a href="#">github.com/yourusername</a></p>
+    <p>GitHub: <a href="#">github.com/andreiiiii22</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Lance Centeno All rights reserved.</p>
   </footer>
 </body>
 </html>
