--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <header>
-    <h1>Lance Andrei Centeno</h1>
+    <h1>Your Name</h1>
     <p>Web Developer | Designer | Creator</p>
   </header>
 
