--- a/index.html
+++ b/index.html
@@ -2,79 +2,242 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lance Andrei Centeno - Portfolio</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f4f4f4;
-      color: #333;
+    :root {
+      --primary-color: #0077cc;
+      --bg-dark: #222;
+      --bg-light: #f4f4f4;
+      --text-dark: #333;
+      --text-light: #fff;
     }
+
+    * {
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      margin: 0;
+      background-color: var(--bg-light);
+      color: var(--text-dark);
+    }
+
+    /* Header */
     header {
-      background-color: #222;
-      color: #fff;
-      padding: 2rem;
+      background-color: var(--bg-dark);
+      color: var(--text-light);
+      padding: 3rem 1rem;
       text-align: center;
     }
-    section {
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0;
+    }
+
+    /* Navbar */
+    nav {
+      background-color: #111;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      padding: 0.8rem;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    nav a {
+      color: var(--text-light);
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: var(--primary-color);
+    }
+
+    /* Sections */
+    section {
+      padding: 3rem 1rem;
+      max-width: 1000px;
+      margin: auto;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+    }
+
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    section h2 {
+      text-align: center;
+      margin-bottom: 1.5rem;
+      font-size: 2rem;
+      color: var(--primary-color);
+    }
+
+    /* About Section */
+    .about {
+      text-align: center;
+    }
+
+    .about img {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    /* Projects Section */
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.5rem;
+    }
+
     .project {
       background: #fff;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
     }
+
+    .project:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+
+    .project h3 {
+      margin-top: 0;
+      color: var(--primary-color);
+    }
+
+    .project a {
+      display: inline-block;
+      margin-top: 0.5rem;
+      color: var(--primary-color);
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .project a:hover {
+      text-decoration: underline;
+    }
+
+    /* Contact Section */
+    .contact p {
+      text-align: center;
+      font-size: 1.1rem;
+      margin: 0.5rem 0;
+    }
+
+    .contact a {
+      color: var(--primary-color);
+      text-decoration: none;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
+    }
+
+    /* Footer */
     footer {
       text-align: center;
       padding: 1rem;
-      background-color: #222;
-      color: #fff;
+      background-color: var(--bg-dark);
+      color: var(--text-light);
+      font-size: 0.9rem;
+      margin-top: 2rem;
     }
-    a {
-      color: #0077cc;
-      text-decoration: none;
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      nav {
+        flex-wrap: wrap;
+      }
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Lance Andrei Centeno</h1>
-    <p>Web Developer | Designer | Creator</p>
+    <p>Web Developer • Designer • Creator</p>
   </header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>Welcome to my portfolio! I'm a passionate developer with experience in building responsive websites and web applications. I love turning ideas into reality through code.</p>
-  </section>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-  <section>
+  <section id="about" class="about">
+  <img src="images/profile.jpg" alt="Lance's Profile Photo">
+  <h2>About Me</h2>
+  <p>Hi! I'm Lance — a passionate developer who loves creating clean, functional, and responsive websites. I enjoy solving problems through code and bringing ideas to life on the web.</p>
+</section>
+
+
+  <section id="projects">
     <h2>Projects</h2>
-    <div class="project">
-      <h3>Project One</h3>
-      <p>A brief description of your project. What it does, what technologies you used, and why it's awesome.</p>
-      <a href="#">View Project</a>
-    </div>
-    <div class="project">
-      <h3>Project Two</h3>
-      <p>Another cool project. Highlight your skills and creativity here.</p>
-      <a href="#">View Project</a>
+    <div class="projects">
+      <div class="project">
+        <h3>Project One</h3>
+        <p>A modern website built with HTML, CSS, and JavaScript. Fully responsive and user-friendly.</p>
+        <a href="#" target="_blank">View Project →</a>
+      </div>
+      <div class="project">
+        <h3>Project Two</h3>
+        <p>An innovative web app showcasing my skills in UI/UX design and frontend development.</p>
+        <a href="#" target="_blank">View Project →</a>
+      </div>
     </div>
   </section>
 
-  <section>
+  <section id="contact" class="contact">
     <h2>Contact</h2>
-    <p>Email: centenolanceandre@gmail.com</p>
+    <p>Email: <a href="mailto:centenolanceandre@gmail.com">centenolanceandre@gmail.com</a></p>
     <p>LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></p>
-    <p>GitHub: <a href="#">github.com/andreiiiii22</a></p>
+    <p>GitHub: <a href="https://github.com/andreiiiii22" target="_blank">github.com/andreiiiii22</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Lance Centeno All rights reserved.</p>
+    <p>&copy; 2025 Lance Centeno. All rights reserved.</p>
   </footer>
+
+  <script>
+    // Fade-in scroll animation
+    const sections = document.querySelectorAll('section');
+
+    function revealSections() {
+      const triggerBottom = window.innerHeight * 0.85;
+
+      sections.forEach(section => {
+        const rect = section.getBoundingClientRect();
+        if (rect.top < triggerBottom) {
+          section.classList.add('visible');
+        }
+      });
+    }
+
+    window.addEventListener('scroll', revealSections);
+    window.addEventListener('load', revealSections);
+  </script>
 </body>
 </html>
